--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                 <div data-slider>
                     <div>
                         <div class="reviews__item">
-                            <img class="reviews__photo" src="../../img/avatar.png" alt="">
+                            <img class="reviews__photo" src="assets/images/avatar.png" alt="">
                             <div class="reviews__text">“Когда вы действительно учитесь, вы учитесь в течение всей жизни; и для вас нет какого-то особого учителя, который учил бы вас. Тогда вас учит все - опавший лист, летящая птица, запах, слезы; богач и бедняк; люди, которые плачут; улыбка женщины и высокомерие мужчины.”</div>
                             <div class="reviews__author"> Джидду Кришнамурти</div>
                         </div>
